@startuml
'https://plantuml.com/class-diagram

package entities {
    class Person {
    - id : Long
    - e-mail : String
    - firstName : String
    - lastName : String
    - password : String
    }

    class Hobby {
    - id : Long
    - name : String
    - description : String
    }

    class Address {
    - id : Long
    - street : String
    - additionalInfo : String
    }

    class Phone {
    - id : Long
    - number : String
    }

    class CityInfo {
    - id : Long
    - zipCode : int
    - city : String
    }
}

package dtos {
    class PersonDTO {
    - id : Long
    - e-mail : String
    - firstName : String
    - lastName : String
    - phone : Set<String>
    - hobbies : Map<String, String>
    - streetName : String
    - streetAdditionalInfo : String
    }
}

package Facades {
    class PersonFacade {
    + createPerson()
    + readPersonFromPhone()
    + updatePerson()
    + deletePersonFromPhone()
    + readAllPersonsFromHobby()
    + readAllPersonsFromCity()
    + deleteAddress()
    }
}

Person "*" o-- "*" Hobby
Person "*" o-- "1" Address
Person "1" *-- "*" Phone
Address "*" o-- "1" CityInfo

PersonFacade -- entities
PersonFacade -- PersonDTO

@enduml